Update swagger setting
