# packages/server/src/books/dtos/createBookSelfDto.ts
@@ -15,13 +15,16 @@ export class CreateBookSelfDto {
   @IsNotEmpty()
   publisher: string;
 
-  @ApiProperty({ description: '読書状態' })
+  @ApiProperty({
+    description: '読書状態 1: 未読 2: 読書中 3: 読了 4: 中断',
+    enum: statusValues,
+  })
   @IsNotEmpty()
   status: Status;
 
-  @ApiProperty({ description: 'カテゴリー', enum: statusValues })
+  @ApiProperty({ description: 'カテゴリー' })
   @IsNotEmpty()
-  category: Status;
+  category: number;
 
   @ApiProperty({ description: '画像パス' })
   @IsNotEmpty()
